--- a/sec/intro.tex
+++ b/sec/intro.tex
@@ -10,7 +10,7 @@
   \includegraphics[width=.85\columnwidth]{img/difftest} %
   % \vspace{-2em}%
   \caption{%
-    Differential testing a single test case across multiple testbeds. A test-case consists of a program source and its runtime parameters and data. % Outcomes may be the output of the program execution, a compiler crash, a runtime crash, or a timeout error.%
+    Differential testing a single test case across multiple testbeds. A test case consists of a program source and its runtime parameters and data. % Outcomes may be the output of the program execution, a compiler crash, a runtime crash, or a timeout error.%
   }%
   \label{fig:difftest}
 \end{figure}
@@ -20,7 +20,7 @@ Optimizing compilers are large and complex programs, with a practically infinite
 
 % XSmith: It is difficult to create effective fuzzers for programming language compilers and interpreters because these systems have highly structured inputs, but it is important that such fuzzers exist. Programming language implementations are critical software infrastructure: defects in compilers and interpreters can potentially have great costs in terms of software correctness and reliability, human productivity, and computer security. This project seeks to reduce the time and human effort needed to create sophisticated fuzzers for programming language implementations. In so doing, this project is expected to advance the state of the art in random software testing, improve the quality of several programming language implementations selected for study, and produce new open-source software tools that programmers can use to develop new and more effective fuzz testers.
 
-Differential Testing is an effective and widely studied methodology for identifying compiler bugs~\cite{Chen2014a,Kossatchev2005}. Figure~\ref{fig:difftest} shows the approach. A \emph{test-case}, that is, a program code and any data required to execute it, is compiled and executed a cross a number of \emph{testbeds} (a <compiler, hardware> pair). If any of the compilers crash or loop indefinitely, or if the output of the programs differs between compilers, then a potential bug has been discovered. A probabilistic grammar is used to enumerate a large, random program, which is then compiled and executed across a number of compilers. In this manner, CSmith~\cite{Yang2011}, a random program generator for the C programming language, has been used to identify hundreds of bugs in compilers. CSmith defines a probabilistic grammar over a large subset of the C programming language, and recursively instantiates a program, using rigorous and conservative static and dynamic analysis to ensure that programs are free from undefined behavior.
+Differential Testing is an effective and widely studied methodology for identifying compiler bugs~\cite{Chen2014a,Kossatchev2005}. Figure~\ref{fig:difftest} shows the approach. A \emph{test case}, that is, a program code and any data required to execute it, is compiled and executed a cross a number of \emph{testbeds} (a <compiler, hardware> pair). If any of the compilers crash or loop indefinitely, or if the output of the programs differs between compilers, then a potential bug has been discovered. A probabilistic grammar is used to enumerate a large, random program, which is then compiled and executed across a number of compilers. In this manner, CSmith~\cite{Yang2011}, a random program generator for the C programming language, has been used to identify hundreds of bugs in compilers. CSmith defines a probabilistic grammar over a large subset of the C programming language, and recursively instantiates a program, using rigorous and conservative static and dynamic analysis to ensure that programs are free from undefined behavior.
 
 Developing a random program generation is a huge undertaking, requiring a deep understanding of the target programming language -- CSmith was developed over the course of years, and consists of over 40k lines of handwritten C++ code. By tightly coupling the generation logic with the target programming language, each feature of the grammar must be painstakingly and expertly engineered, and is accompanied by exponential costs in developing the static and dynamic safety checks to ensure that generated programs remain free from (or at least, are likely free from) undefined behavior. For example, lifting CSmith from C to OpenCL~\cite{Lidbury2015a} took 9 months and 8k lines of code. As such, typically only a subset of the language is implemented, and the expressiveness of the grammar is bounded by the limits of static and dynamic analysis.
 % --- to date, important language features such as strings, dynamic memory allocation, function pointers, and recursion are unsupported.
@@ -42,7 +42,7 @@ Our implementation, DeepSmith, targets OpenCL, an open standard for programming 
 %
 %CSmith~\cite{Yang2011}, a popular random program generator for the C programming language, defines a probabilistic grammar over a large subset of the C programming language, and recursively instantiates a program, using rigorous and conservative static and dynamic analysis to ensure that programs are free from undefined behavior.
 %
-%Typically, these generated programs are many hundreds or thousands of lines long. As such, an additional test-case reduction process is usually required, iteratively mutating the program in an attempt to produce a minimal working example which preserves the behavior of interest.
+%Typically, these generated programs are many hundreds or thousands of lines long. As such, an additional test case reduction process is usually required, iteratively mutating the program in an attempt to produce a minimal working example which preserves the behavior of interest.
 %
 %--- to date, CLSmith does not support unions, dynamic memory allocation, strings, etc. EMI testing can simplify the production somewhat by reducing the generation only to program mutations, and deadcode insertions, but \ldots.
 %
@@ -67,9 +67,9 @@ Our implementation, DeepSmith, targets OpenCL, an open standard for programming 
 We make the following contributions:
 %
 \begin{itemize}
-\item \emph{DeepSmith}, a novel, data-drive approach for the generation of random programs for compiler fuzzing. DeepSmith \emph{infers} programming language use from real-world examples in order to generate plausible compiler test-cases; % CLSmith requires expert-driven development for every language feature supported. 40+k lines of C++ vs a few hundred lines of Python.
+\item \emph{DeepSmith}, a novel, data-drive approach for the generation of random programs for compiler fuzzing. DeepSmith \emph{infers} programming language use from real-world examples in order to generate plausible compiler test cases; % CLSmith requires expert-driven development for every language feature supported. 40+k lines of C++ vs a few hundred lines of Python.
 \item through syntactic modeling of expressive program code we discover bugs in compilers which the grammar-based approaches cannot, covering more components of the compiler;
 % e.g. ill-formed
 \item we find bugs faster than the state-of-the-art. In 48 hours we discovered and report XX bugs in compiler and open source OpenCL implementations, XX\% more than CLSmith over the same time period;
-\item in modeling real handwritten code, our test-cases are more interpretable than other approaches. Average test-case size is two orders of magnitude smaller than state-of-the-art;
+\item in modeling real handwritten code, our test cases are more interpretable than other approaches. Average test case size is two orders of magnitude smaller than state-of-the-art;
 \end{itemize}
