Update on Overleaf.

--- a/refs.bib
+++ b/refs.bib
@@ -11804,3 +11804,25 @@
     booktitle = {INRIA Paris-Rocquencourt},
     author = {Leroy, X.}
 }
+
+@article{Kossatchev2005,
+    title = {{Survey of compiler testing methods}},
+    year = {2005},
+    journal = {Programming and Computer Software},
+    author = {Kossatchev, A. S. and Posypkin, M. A.},
+    number = {1},
+    volume = {31},
+    doi = {10.1007/s11086-005-0002-z},
+    issn = {03617688}
+}
+
+@article{Chen2017a,
+    title = {{How Do Assertions Impact Coverage-Based Test-Suite Reduction?}},
+    year = {2017},
+    journal = {Proceedings - 10th IEEE International Conference on Software Testing, Verification and Validation, ICST 2017},
+    author = {Chen, Junjie and Bai, Yanwei and Hao, Dan and Zhang, Lingming and Zhang, Lu and Xie, Bing},
+    pages = {418--423},
+    isbn = {9781509060313},
+    doi = {10.1109/ICST.2017.45},
+    keywords = {Assertions, Empirical Study, Test-suite Reduction}
+}
