--- a/sec/related_work.tex
+++ b/sec/related_work.tex
@@ -10,7 +10,7 @@ Increasing complexity of generations: RandProg to CSmith. Then EMI testing, and 
 
 The \emph{fuzz taming problem} is addressed in~\cite{Chen2013}, in which a distance metric is used to rank test cases such that diverse, interesting test cases are highly ranked.
 
-Empirical comparion of compiler testing techniques~\cite{Chen2014a}
+Empirical comparison of compiler testing techniques~\cite{Chen2014a}
 
 Analysis of bugs in GCC and LLVM finds 80\% of test cases to be 45 lines~\cite{Sun2016}.
 
